install: utilisation de apache vfs